--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,15 @@ dist.jar=${dist.dir}/UniversidadGrupo9.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\Maxi\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\Bau\\Downloads\\mariadb-java-client-3.1.4.jar
+file.reference.mariadb-java-client-3.1.4.jar-1=C:\\Users\\Maxi\\Desktop\\Drivers\\mariadb-java-client-3.1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.1.4.jar}
+    ${file.reference.mariadb-java-client-3.1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mariadb-java-client-3.1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
