--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\Maxi\\Desktop\\Drivers\\mariadb-java-client-3.1.4.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Bau\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Maxi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
